apply plugin: 'java'
apply plugin: 'application'

group = 'com.obliquity.mailtool'

version = '1.0'

sourceCompatibility = '1.8'

jar {
    manifest {
        attributes "Main-Class": "com.obliquity.mailtool.ListFolders"
    }
 
    from {
        configurations.compileClasspath.collect { it.isDirectory() ? it : zipTree(it) }
    }
}

repositories {
    mavenCentral()

}

dependencies {
    implementation 'com.sun.mail:javax.mail:1.6.2'
    implementation 'com.sun.activation:javax.activation:1.2.0'
}

task extlibs(type: Copy) {
  group 'distribution'
  description 'Imports external JAR dependencies.'
  from configurations.runtimeClasspath.findAll { it.name.endsWith('jar') }
  into "$buildDir/extlibs"
}

build.dependsOn extlibs
